# setup.cfg
[metadata]
name = pamai
version = attr: pamai.version.__version__
author = Chris Rauch 
author_email = chrisrauch193@gmail.com
keywords = pamai, ai, audio, denet, arthur, zucker

# add a description of your package
description = Package for PAMAI written by Arthur Zucker and Chris Rauch.
long_description = file: README.md
long_description_content_type = text/markdown

# add the url to your repository/homepage and version release
url = https://github.com/ArthurZucker/PAMAI
download_url = https://github.com/ArthurZucker/PAMAI/archive/refs/tags/v1.0.5.tar.gz

# define your license and license file
license = MIT
license_files = LICENSE.txt

classifiers = 
    # for a full list of classifiers see https://pypi.org/classifiers/
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers      
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8

[options]
install_requires =
    PyAudio==0.2.13
    pybind11==2.10.4
    Cython==0.29.34
    numpy==1.23.5
    certifi==2022.12.7
    versioneer==0.28
    dcase-util==0.2.20
    easydict==1.10
    matplotlib==3.7.1
    pythran==0.12.1
    pandas==2.0.0
    pypandoc==1.11
    runx==0.0.11
    scikit-learn==1.2.2
    scipy==1.10.1
    simple-parsing==0.1.2
    torch==2.0.0
    torchaudio==2.0.1
    tqdm==4.65.0
    wandb==0.15.0

python_requires = ~=3.8